src/snapshots/crafting_interpreters__test__print_statement.snap
---
source: src/test.rs
expression: output
---
[
    ExprStatment(
        [
            NonTerm(
                Print,
                [
                    Atom(
                        String {
                            range: 6..13,
                            source: "print \"hello\";",
                        },
                    ),
                ],
            ),
        ],
    ),
]
