src/snapshots/crafting_interpreters__test__var.snap
---
source: src/test.rs
expression: output
---
[
    Var(
        "a",
        Atom(
            Number(
                1.0,
            ),
        ),
    ),
]
